@@ -223,11 +223,14 @@
 # unlike in rsmb.
 # The direction that the topic will be shared can be chosen by 
 # specifying out, in or both, where the default value is out. 
+# The QoS level of the bridged communication can be specified with the final
+# topic option. The default QoS level is 2, to change the QoS the topic
+# direction must also be given.
 # Multiple topics can be specified per connection, but be careful 
 # not to create any loops.
 #connection <name>
 #address <host>[:<port>]
-#topic <topic> [out | in | both]
+#topic <topic> [[out | in | both] qos-level]
 
 # Set the client id for this bridge connection. If not defined, 
 # this defaults to 'name.hostname' where name is the connection 
